Bug 606528.  Don't map the type attribute for inputs.  r=emilio

The change to test_bug558726.html is because we always serialize mapped
attributes after non-mapped ones.  So this change is actually improving our
serialization in that test.